k8s/20-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
